--- a/username.html
+++ b/username.html
@@ -307,18 +307,23 @@ function mostrarFormReserva() {
     const result = await res.json();
 console.log("Respuesta del backend:", result);
 if (result.status === "ok") {
+  // borro el formulario, pero dejo el contenedor
+  document.getElementById("reservaForm").remove();
+
+  // muestro el ticket en reservaMsg
   document.getElementById("reservaMsg").innerHTML = `
     <div class="ticket">
       ${result.ticketHTML}
       <button onclick="window.print()">Imprimir Ticket</button>
     </div>
   `;
-  // Oculto el formulario para que no vuelva a enviar
-  document.getElementById("reservaFormContainer").style.display = "none";
-  // Actualizo turnos
+
+  // actualizo turnos
   cargarTurnos(fechaStr);
 } else {
-  document.getElementById("reservaMsg").innerText = "Error al reservar: " + (result.msg || "");
+  document.getElementById("reservaMsg").innerText =
+    "Error al reservar: " + (result.msg || "");
+
 }
   }; 
 } 
