--- a/turnos.html
+++ b/turnos.html
@@ -97,12 +97,14 @@ div { text-align: center; }
 <script>
 const API_URL = "https://script.google.com/macros/s/AKfycbyFGGpfszwxPYakYsW-o5H2RPV-5LoHJf1706GJoxzTB63BvLkvTRUI2Bc_LpcQFXjx/exec";
 
-// ------------------ OBTENER USERNAME ------------------
-let params = new URLSearchParams(window.location.search);
-let username = params.get("username");
-let userId = params.get("userId");
+// ------------------ USUARIO LOGUEADO ------------------
+let username = localStorage.getItem("username");
+let userId = localStorage.getItem("userId");
 
-if (!username) alert("Falta username en la URL");
+if(!username){
+  alert("No hay usuario logueado");
+  window.location.href = "login.html";
+}
 
 let selectedDate = new Date();
 let turnosUsuario = [];
@@ -123,9 +125,9 @@ async function cargarTurnosUsuario() {
   try {
     const res = await fetch(`${API_URL}?action=getTurnosUsuario&username=${username}&userId=${userId}`);
     const data = await res.json();
-    if(data.status !== "ok") return;
+    console.log("Respuesta API turnosUsuario:", data);
 
-    turnosUsuario = data.turnos; // todos los turnos del usuario
+    turnosUsuario = Array.isArray(data.turnos) ? data.turnos : [];
     turnosPorFecha = {};
     turnosUsuario.forEach(t => {
       if(!turnosPorFecha[t.fecha]) turnosPorFecha[t.fecha] = [];
@@ -151,8 +153,7 @@ function renderCalendario(year, month) {
   for(let d=1; d<=lastDay.getDate(); d++){
     const fecha = new Date(year, month, d);
     const fechaStr = fecha.toISOString().split("T")[0];
-    let clase = "";
-    if(turnosPorFecha[fechaStr]) clase = "turno";
+    let clase = turnosPorFecha[fechaStr] ? "turno" : "";
 
     if(fecha < new Date(today.getFullYear(), today.getMonth(), today.getDate())){
       table += `<td style="color:#999; cursor:not-allowed;">${d}</td>`;
