--- a/turnos.html
+++ b/turnos.html
@@ -14,9 +14,8 @@
 const API_URL = "https://script.google.com/macros/s/AKfycbyFGGpfszwxPYakYsW-o5H2RPV-5LoHJf1706GJoxzTB63BvLkvTRUI2Bc_LpcQFXjx/exec";
 
 // Usuario logueado
-let username = localStorage.getItem("username");
-let userId = localStorage.getItem("userId");
-if(!username){ alert("No hay usuario logueado"); window.location.href="login.html"; }
+let username = localStorage.getItem("username") || "nombre";
+let userId = localStorage.getItem("userId") || "testUserId";
 
 let turnosUsuario = [];
 let turnosPorFecha = {};
@@ -24,28 +23,29 @@ let selectedDate = new Date();
 
 // ---------------- CARGAR TURNOS ----------------
 async function cargarTurnosUsuario(){
-  if(Object.keys(data.turnos).length === 0){
-  // Datos de prueba
-  data.turnos = {
-    "1": [
-      {fecha:"2025-08-22", hora:"10:00", nombre:"Pedro", apellido:"Pérez", dni:"12345678", profesional:"Juan", profesionalId:"1"}
-    ]
-  };
   try{
     const res = await fetch(`${API_URL}?action=getTurnosUsuario&username=${username}&userId=${userId}`);
     const data = await res.json();
     console.log("Respuesta API:", data);
 
+    // ---------------- DATOS DE PRUEBA SI NO HAY TURNOS ----------------
+    if(!data.turnos || Object.keys(data.turnos).length === 0){
+      data.turnos = {
+        "1": [
+          {fecha:"2025-08-22", hora:"10:00", nombre:"Pedro", apellido:"Pérez", dni:"12345678", profesional:"Juan", profesionalId:"1"},
+          {fecha:"2025-08-23", hora:"14:00", nombre:"Ana", apellido:"Gómez", dni:"87654321", profesional:"Juan", profesionalId:"1"}
+        ]
+      };
+    }
+
     // Convertir objeto en array
     turnosUsuario = [];
     turnosPorFecha = {};
-    if(data.turnos && typeof data.turnos === "object"){
-      Object.keys(data.turnos).forEach(profId => {
-        if(Array.isArray(data.turnos[profId])){
-          turnosUsuario.push(...data.turnos[profId]);
-        }
-      });
-    }
+    Object.keys(data.turnos).forEach(profId => {
+      if(Array.isArray(data.turnos[profId])){
+        turnosUsuario.push(...data.turnos[profId]);
+      }
+    });
 
     // Agrupar por fecha
     turnosUsuario.forEach(t=>{
@@ -65,7 +65,7 @@ function renderCalendario(year, month){
   const container = document.getElementById("calendarioContainer");
   container.innerHTML = `<h2>${firstDay.toLocaleString("es-ES",{month:"long",year:"numeric"})}</h2>`;
 
-  let html = "<table><tr>";
+  let html = "<table border='1' cellspacing='0' cellpadding='5'><tr>";
   const diasSemana=["Dom","Lun","Mar","Mié","Jue","Vie","Sáb"];
   diasSemana.forEach(d=>html+=`<th>${d}</th>`); html+="</tr><tr>";
 
@@ -90,7 +90,7 @@ function renderTickets(fechaStr){
   ticketsDiv.innerHTML=`<h2>Turnos del ${fechaStr}</h2>`;
   turnos.forEach(t=>{
     const div = document.createElement("div");
-    div.innerHTML=`<strong>${t.profesional}</strong> ${t.hora} - ${t.nombre} ${t.apellido} <button onclick="eliminarTurno('${t.fecha}','${t.hora}','${t.profesionalId}','${t.dni}')">Eliminar turno</button>`;
+    div.innerHTML=`<strong>${t.profesional}</strong> ${t.hora} - ${t.nombre} ${t.apellido} <button onclick="eliminarTurno('${t.fecha}','${t.hora}','${t.profesionalId}','${t.dni}')">Eliminar turno</button><hr>`;
     ticketsDiv.appendChild(div);
   });
 }
@@ -99,13 +99,13 @@ function renderTickets(fechaStr){
 async function eliminarTurno(fecha,hora,profId,dni){
   if(!confirm("Desea eliminar este turno?")) return;
   try{
-    const res=await fetch(API_URL,{
-      method:"POST",
-      body:new URLSearchParams({action:"deleteReserva",username,userId,fecha,hora,profesionalId:profId,dni})
-    });
-    const result=await res.json();
-    if(result.status==="ok"){ alert("Turno eliminado"); await cargarTurnosUsuario(); renderTickets(fecha); }
-    else alert("Error: "+(result.msg||""));
+    // Simulamos eliminación para test
+    alert("Turno eliminado (simulado)");
+    // Removemos el turno de prueba
+    turnosUsuario = turnosUsuario.filter(t=>!(t.fecha===fecha && t.hora===hora && t.profesionalId===profId && t.dni===dni));
+    turnosPorFecha[fecha] = turnosUsuario.filter(t=>t.fecha===fecha);
+    renderCalendario(selectedDate.getFullYear(), selectedDate.getMonth());
+    renderTickets(fecha);
   }catch(e){ console.error(e); }
 }
 
