--- a/turnos.html
+++ b/turnos.html
@@ -14,8 +14,10 @@
 const API_URL = "https://script.google.com/macros/s/AKfycbyFGGpfszwxPYakYsW-o5H2RPV-5LoHJf1706GJoxzTB63BvLkvTRUI2Bc_LpcQFXjx/exec";
 
 // Usuario logueado
-let username = localStorage.getItem("username") || "nombre";
-let userId = localStorage.getItem("userId") || "testUserId";
+let username = localStorage.getItem("username");
+let userId = localStorage.getItem("userId");
+
+if(!username){ alert("No hay usuario logueado"); window.location.href="login.html"; }
 
 let turnosUsuario = [];
 let turnosPorFecha = {};
@@ -28,24 +30,16 @@ async function cargarTurnosUsuario(){
     const data = await res.json();
     console.log("Respuesta API:", data);
 
-    // ---------------- DATOS DE PRUEBA SI NO HAY TURNOS ----------------
-    if(!data.turnos || Object.keys(data.turnos).length === 0){
-      data.turnos = {
-        "1": [
-          {fecha:"2025-08-22", hora:"10:00", nombre:"Pedro", apellido:"Pérez", dni:"12345678", profesional:"Juan", profesionalId:"1"},
-          {fecha:"2025-08-23", hora:"14:00", nombre:"Ana", apellido:"Gómez", dni:"87654321", profesional:"Juan", profesionalId:"1"}
-        ]
-      };
-    }
-
-    // Convertir objeto en array
+    // Convertir objeto en array seguro
     turnosUsuario = [];
     turnosPorFecha = {};
-    Object.keys(data.turnos).forEach(profId => {
-      if(Array.isArray(data.turnos[profId])){
-        turnosUsuario.push(...data.turnos[profId]);
-      }
-    });
+    if(data.turnos && typeof data.turnos === "object"){
+      Object.keys(data.turnos).forEach(profId => {
+        if(Array.isArray(data.turnos[profId])){
+          turnosUsuario.push(...data.turnos[profId]);
+        }
+      });
+    }
 
     // Agrupar por fecha
     turnosUsuario.forEach(t=>{
@@ -54,7 +48,7 @@ async function cargarTurnosUsuario(){
     });
 
     renderCalendario(selectedDate.getFullYear(), selectedDate.getMonth());
-  }catch(e){ console.error(e); }
+  }catch(e){ console.error(e); document.getElementById("ticketsContainer").innerHTML="<p>Error al cargar turnos.</p>"; }
 }
 
 // ---------------- RENDER CALENDARIO ----------------
@@ -99,13 +93,18 @@ function renderTickets(fechaStr){
 async function eliminarTurno(fecha,hora,profId,dni){
   if(!confirm("Desea eliminar este turno?")) return;
   try{
-    // Simulamos eliminación para test
-    alert("Turno eliminado (simulado)");
-    // Removemos el turno de prueba
-    turnosUsuario = turnosUsuario.filter(t=>!(t.fecha===fecha && t.hora===hora && t.profesionalId===profId && t.dni===dni));
-    turnosPorFecha[fecha] = turnosUsuario.filter(t=>t.fecha===fecha);
-    renderCalendario(selectedDate.getFullYear(), selectedDate.getMonth());
-    renderTickets(fecha);
+    const res=await fetch(API_URL,{
+      method:"POST",
+      body:new URLSearchParams({action:"deleteReserva",username,userId,fecha,hora,profesionalId:profId,dni})
+    });
+    const result=await res.json();
+    if(result.status==="ok"){ 
+      alert("Turno eliminado");
+      // Refrescar datos
+      await cargarTurnosUsuario();
+      renderTickets(fecha);
+    }
+    else alert("Error al eliminar turno: "+(result.msg||""));
   }catch(e){ console.error(e); }
 }
 
